# SiW-Calorimeter-Simulation

./: .gitignore  CMakeLists.txt  README.md  SiWGenericSimulation.cc  SiWSimulation.cc
include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh  DetectorFieldSetup.hh  LCIOWriter.hh  SiWEcalActionInitialization.hh  SiWEcalPrimaryGeneratorAction.hh  SiWEcalPrimaryGeneratorActionMessenger.hh  SiWGenericEcalPrimaryGeneratorAction.hh  SiWGenericRun.hh  SiWRun.hh  SiWRunAction.hh  SiWSensitiveDetector.hh  SiWTrackHit.hh
mac/: cosmic.mac  cosmic.mac~  geom.mac  geom.mac~  gui.mac  run.mac  run.mac~  runMultiple.mac~
python/: runCosmic.py  runMultiParticle.py  runMuonPlusFSR.py  runMuonPlusJet.py  runSingle.py
python/src/: eventGeneration.py  example.py  fsr.py  muPjet.py  multiParticle.py  single.py  test.py
script/: cosmic-simu.sh  runMultiParticleSimulation.sh  runMultiParticleSimulation.sh~  runMuonPlusFSR.sh~  runMuonPlusJet.sh  runMuonPlusJet.sh~  runSingle.sh  siwecal-simu-multi.sh  siwecal-simu-standard.sh  siwecal-simu.sh
src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  DetectorFieldSetup.cc  LCIOWriter.cc  LCIOWriter.cc~  SiWEcalActionInitialization.cc  SiWEcalPrimaryGeneratorAction.cc  SiWEcalPrimaryGeneratorActionMessenger.cc  SiWGenericEcalPrimaryGeneratorAction.cc  SiWGenericEcalPrimaryGeneratorAction.cc~  SiWGenericRun.cc  SiWRun.cc  SiWRunAction.cc  SiWSensitiveDetector.cc  SiWTrackHit.cc
